k8s/application/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-http2: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: test.kube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-server
            port:
              number: 8080
